--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "bin": "Node/nodekit.js",
   "dependencies": {
     "connect": "1.2",
-    "socket.io":"0.6"
+    "socket.io":"0.6",
+    "mime":"1.2"
   },
   "devDependencies": {}
 }
